# game-dev-memory

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  deploy-api-worker.yml  deploy-web-vercel.yml  publish-pajama.yml
api/: Dockerfile  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
api/migrations/: 0001_init.sql  0002_tenant_sessions_artifacts.sql  0003_identity_tokens_oauth.sql  0004_assets_multipart.sql  0005_memory_state_fts.sql  0006_memory_events.sql  0007_agent_perf_indexes.sql  0008_evolve_arena_indexes.sql  0009_project_retrieval_policies.sql
api/sandbox/: agent-runner.ts  package.json
api/scripts/: migrate.js
api/src/: appEnv.ts  db.ts  index.ts  tenant.ts  types.ts
api/src/agent/: anthropic.ts  pageindex.ts  retrievalPlanner.ts
api/src/auth/: apiTokens.ts  authenticate.ts  clerk.ts  crypto.ts  (+2 more)
docs/: api.md  architecture.md  cli.md  deployment.md  e2e.md  mvp-scope.md  npm-trusted-publishing.md  roadmap.md
e2e/: smoke-live-api-mcp.spec.ts  smoke-live-cli.spec.ts  smoke-public.spec.ts
pajama/: Cargo.toml
pajama/src/: api.rs  config.rs  main.rs  oauth.rs
research/: agent-memory.md  new-projects.md  pageindex.md  ue-memory.md
scripts/: benchmark-agent-retrieval.ps1  e2e-live.ps1  release-pajama.ps1
skills/agent-memory-research/: SKILL.md
skills/memory-evolver/: SKILL.md  index.js  package.json
skills/pajama-cli/: SKILL.md
skills/unreal-agents/: SKILL.md
skills/ux-e2e/: SKILL.md
web/: next.config.ts  package-lock.json  package.json
web/src/: middleware.ts
(+191 files in other folders)
