[package]
name = "pajama"
version = "0.1.10"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
clap = { version = "4.5.29", features = ["derive"] }
directories = "5.0.1"
open = "5.3.2"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time"] }
url = "2.5.4"
